# training

./: .gitignore  LICENSE  README.md  challenge.md
.github/readme_builder/: app.rb  dependencies.sh  template.md
.github/workflows/: build_docs.yml
basics/python/: binary_search.py
code/python/: 10870.py  10952.py  11021.py  11022.py  1110.py  1193.1.py  1316.py  1712.py  2562.py  2588.py  2741.py  2775.py  2839.py  2908.py  4344.py  8393.py
docs/: CNAME  _config.yml
docs/2022-jnu-training-contests/: README.md
docs/_drafts/: 2021-04-30-hello-jekyll.md
docs/_posts/: 2021-04-30-why-prefix-gen.md  2021-11-04-download-lecture.md
implementation/: README.md
implementation/cryingseas/: README.md
implementations/babylonjs/: package.json
implementations/minecraft-launcher-rust/: Cargo.toml  index.html  package-lock.json  package.json
implementations/minecraft-launcher-rust/backend/lib/asset-management/: Cargo.toml
implementations/minecraft-launcher-rust/backend/lib/asset-management/src/: definitions.rs  fs.rs  lib.rs
implementations/minecraft-launcher-rust/backend/lib/asset-management/tests/: fs.rs
implementations/minecraft-launcher-rust/backend/lib/commons/: Cargo.toml
implementations/minecraft-launcher-rust/backend/lib/commons/src/: lib.rs  rest.rs
implementations/minecraft-launcher-rust/backend/lib/minecraft/: Cargo.toml
implementations/minecraft-launcher-rust/backend/lib/net/: Cargo.toml
implementations/minecraft-launcher-rust/backend/lib/net/src/: lib.rs
implementations/minecraft-launcher-rust/frontend/: App.svelte
note/: 2839.md
(+2378 files in other folders)
