[workspace]
resolver = "2"
members = ["./backend/bin/*", "./backend/lib/*"]

[workspace.package]
version = "0.0.0"
license = "MIT"
authors = ["ShapeLayer"]
edition = "2021"
repository = ""

[workspace.dependencies]

[workspace.dependencies.aimless-next-commons]
version = "0.0.0"
path = "./backend/lib/commons"

[workspace.dependencies.aimless-next-net]
version = "0.0.0"
path = "./backend/lib/net"
